--- a/src/common/style/common-style.scss
+++ b/src/common/style/common-style.scss
@@ -5,9 +5,8 @@ swiper-item {
 }
 
 .pageBg {
-  min-height: 80vh;
-  background: linear-gradient(to bottom, transparent, #fff 400rpx),
-    linear-gradient(to right, #beecd8 20%, #f4e2d8);
+  background: linear-gradient(to bottom, rgba(0, 0, 0, 0), white 400rpx),
+    linear-gradient(to right, #e8ffea 20%, #fff3e8);
 }
 
 .loadingLayout {
